<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_chosen"
    android:padding="20dp"
    tools:context=".SelesaiJobActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_selesai"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/invoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/invoice_id"
                android:textStyle="bold"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/staticJobseekerName"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/jobseeker_name"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/invoice"/>

            <TextView
                android:id="@+id/jobseeker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jobseeker_name"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@+id/invoice"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/staticInvoiceDate"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/invoice_date"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/staticJobseekerName"/>

            <TextView
                android:id="@+id/invoice_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_date"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@+id/jobseeker_name"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/staticPaymentType"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/payment_type"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/staticInvoiceDate"/>

            <TextView
                android:id="@+id/payment_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_type"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@+id/invoice_date"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/staticInvoiceStatus"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/invoice_status"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/staticPaymentType"/>

            <TextView
                android:id="@+id/invoice_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_status"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@+id/payment_type"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/staticReferralCode1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/referral_code"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/staticInvoiceStatus"/>

            <TextView
                android:id="@+id/referral_code1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/referral_code"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@+id/invoice_status"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/staticJobName1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/job_name"
                android:textSize="15sp"
                android:layout_marginVertical="30dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/staticReferralCode1"/>

            <TextView
                android:id="@+id/job_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_name"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/staticJobName1"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fee"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/staticJobName1"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/job_name1"/>

            <TextView
                android:id="@+id/staticTotalFee1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_fee"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/line"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/total_fee1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_fee"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/line"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/staticTotalFee1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/finish"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/staticTotalFee1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>