<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplyJobActivity"
    android:background="@color/blue_chosen"
    android:paddingHorizontal="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="70dp">

                <include
                    android:id="@+id/include1"
                    layout="@layout/action_bar_applyjob"
                    android:layout_marginBottom="50dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/staticJobName"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/job_name"
                    android:textSize="15sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include1"/>

                <TextView
                    android:id="@+id/job_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_name"
                    android:textSize="15sp"
                    android:textColor="@color/blue_chosen"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/include1"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/staticCategory"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/job_category"
                    android:textSize="15sp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticJobName"/>

                <TextView
                    android:id="@+id/job_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_category"
                    android:textSize="15sp"
                    android:textColor="@color/blue_chosen"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/job_name"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/staticFee"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/job_fee"
                    android:textSize="15sp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticCategory"/>

                <TextView
                    android:id="@+id/job_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_fee"
                    android:textSize="15sp"

                    android:textColor="@color/blue_chosen"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/job_category"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/staticPayMethod"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/payment_method"
                    android:textSize="15sp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticFee"/>

                <RadioGroup
                    android:id="@+id/rg_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticPayMethod">

                    <RadioButton
                        android:id="@+id/ewallet"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/e_wallet"
                        android:textColor="@color/blue_chosen"/>

                    <RadioButton
                        android:id="@+id/bank"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/bank"
                        android:textColor="@color/blue_chosen"/>
                </RadioGroup>

                <TextView
                    android:id="@+id/textCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/referral_code"
                    android:textSize="15sp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/rg_payment"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/referral_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/referral_code"
                    android:textSize="15sp"
                    android:textColor="@color/blue_chosen"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rg_payment" />

                <TextView
                    android:id="@+id/staticTotalFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_fee"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/textCode"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/total_fee"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/total_fee"
                    android:textSize="15sp"
                    android:textColor="@color/blue_chosen"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/referral_code"/>

                <Button
                    android:id="@+id/hitung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/count"
                    app:layout_constraintTop_toBottomOf="@+id/staticTotalFee"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"/>

                <Button
                    android:id="@+id/btnApply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    app:layout_constraintTop_toBottomOf="@id/hitung"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="80dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>